@@ -8,11 +8,8 @@ import com.fs.starfarer.api.campaign.comm.IntelInfoPlugin.ListInfoMode;
 import com.fs.starfarer.api.campaign.econ.Industry;
 import com.fs.starfarer.api.campaign.econ.MarketAPI;
 import com.fs.starfarer.api.impl.campaign.ids.*;
-import com.fs.starfarer.api.impl.campaign.intel.events.BaseEventIntel;
+import com.fs.starfarer.api.impl.campaign.intel.events.*;
 import com.fs.starfarer.api.impl.campaign.intel.events.BaseEventIntel.EventStageData;
-import com.fs.starfarer.api.impl.campaign.intel.events.BaseFactorTooltip;
-import com.fs.starfarer.api.impl.campaign.intel.events.BaseHostileActivityFactor;
-import com.fs.starfarer.api.impl.campaign.intel.events.HostileActivityEventIntel;
 import com.fs.starfarer.api.impl.campaign.intel.events.HostileActivityEventIntel.HAERandomEventData;
 import com.fs.starfarer.api.impl.campaign.intel.events.HostileActivityEventIntel.Stage;
 import com.fs.starfarer.api.impl.campaign.intel.group.FleetGroupIntel;
@@ -25,7 +22,6 @@ import com.fs.starfarer.api.ui.LabelAPI;
 import com.fs.starfarer.api.ui.TooltipMakerAPI;
 import com.fs.starfarer.api.ui.TooltipMakerAPI.TooltipCreator;
 import com.fs.starfarer.api.util.Misc;
-import com.fs.starfarer.api.util.WeightedRandomPicker;
 import org.lwjgl.util.vector.Vector2f;
 import org.tranquility.adversary.AdversaryUtil;
 
@@ -50,9 +46,7 @@ public class AdversaryHostileActivityFactor extends BaseHostileActivityFactor im
 
     @Override
     public int getProgress(BaseEventIntel intel) {
-        if (!checkFactionExists(FACTION_ADVERSARY, true)) return 0;
-
-        return super.getProgress(intel);
+        return checkFactionExists(FACTION_ADVERSARY, true) ? super.getProgress(intel) : 0;
     }
 
     @Override
@@ -67,9 +61,7 @@ public class AdversaryHostileActivityFactor extends BaseHostileActivityFactor im
 
     @Override
     public Color getDescColor(BaseEventIntel intel) {
-        if (getProgress(intel) <= 0) return Misc.getGrayColor();
-
-        return Global.getSector().getFaction(FACTION_ADVERSARY).getBaseUIColor();
+        return getProgress(intel) <= 0 ? Misc.getGrayColor() : Global.getSector().getFaction(FACTION_ADVERSARY).getBaseUIColor();
     }
 
     @Override
@@ -175,19 +167,22 @@ public class AdversaryHostileActivityFactor extends BaseHostileActivityFactor im
 
     @Override
     public TooltipCreator getStageTooltipImpl(final HostileActivityEventIntel intel, final EventStageData stage) {
-        if (stage.id == Stage.HA_EVENT) return getDefaultEventTooltip(HA_STAGE_TOOLTIP, intel, stage);
-
-        return null;
+        return stage.id == Stage.HA_EVENT ? getDefaultEventTooltip(HA_STAGE_TOOLTIP, intel, stage) : null;
     }
 
     @Override
     public float getEventFrequency(HostileActivityEventIntel intel, EventStageData stage) {
         if (stage.id == Stage.HA_EVENT) {
-            if (wasAdversaryEverSatBombardedByPlayer())
-                return 666f; // Maybe you shouldn't have proven their point by blowing up one of their planets
+            if (isPlayerDefeatedAdversaryAttack()) return 0f;
 
-            if (pickTargetSystem() != null && pickSourceMarket() != null)
-                return 1f; // Should make this crisis very rare to experience before dealing with most of the other crises
+            if (AdversaryPunitiveExpedition.get() != null) return 0f;
+
+            if (pickTargetSystem(intel, stage) != null && pickSourceMarket() != null) {
+                if (wasAdversaryEverSatBombardedByPlayer())
+                    return 666f; // Maybe you shouldn't have proven their point by blowing up one of their planets
+                else
+                    return 1f; // Should make this crisis very rare to experience before dealing with most of the other crises
+            }
         }
         return 0f;
     }
@@ -201,7 +196,7 @@ public class AdversaryHostileActivityFactor extends BaseHostileActivityFactor im
 
     @Override
     public boolean fireEvent(HostileActivityEventIntel intel, EventStageData stage) {
-        StarSystemAPI target = pickTargetSystem();
+        StarSystemAPI target = pickTargetSystem(intel, stage);
         MarketAPI source = pickSourceMarket();
         if (source == null || target == null) return false;
 
@@ -219,7 +214,7 @@ public class AdversaryHostileActivityFactor extends BaseHostileActivityFactor im
         Misc.adjustRep(Factions.PERSEAN, 0.3f, null);
         Misc.adjustRep(Factions.DIKTAT, 0.3f, null);
         Misc.adjustRep(Factions.TRITACHYON, 0.3f, null);
-        Misc.adjustRep(Factions.INDEPENDENT, 0.6f, null);
+        Misc.adjustRep(Factions.INDEPENDENT, 0.45f, null);
         Misc.adjustRep(Factions.PIRATES, 0.15f, null);
 
         new MutualTenacityScript();
@@ -261,29 +256,17 @@ public class AdversaryHostileActivityFactor extends BaseHostileActivityFactor im
         return false;
     }
 
-    public StarSystemAPI pickTargetSystem() {
-        WeightedRandomPicker<StarSystemAPI> picker = new WeightedRandomPicker<>(getRandomizedStageRandom(3));
-
-        for (StarSystemAPI system : Misc.getPlayerSystems(false)) {
-            float mag = getEffectMagnitude(system);
-            if (mag < 0.1f) continue;
-            picker.add(system, mag * mag);
-        }
-
-        return picker.pick();
+    public StarSystemAPI pickTargetSystem(HostileActivityEventIntel intel, EventStageData stage) {
+        return PerseanLeagueHostileActivityFactor.findBlockadeTarget(intel, stage);
     }
 
     public MarketAPI pickSourceMarket() {
-        MarketAPI source = null;
-        for (MarketAPI market : AdversaryUtil.getAdversaryMilitaryMarkets().descendingSet()) {
-            Industry hc = market.getIndustry(Industries.HIGHCOMMAND);
-            if (hc == null) hc = market.getIndustry(Industries.MILITARYBASE);
-            if (hc != null && !hc.isDisrupted() && hc.isFunctional()) {
-                source = market;
-                break;
-            }
+        for (MarketAPI market : AdversaryUtil.getAdversaryMarkets().descendingSet()) {
+            Industry b = market.getIndustry(Industries.HIGHCOMMAND);
+            if (b == null) b = market.getIndustry(Industries.MILITARYBASE);
+            if (b != null && !b.isDisrupted() && b.isFunctional()) return market;
         }
-        return source;
+        return null;
     }
 
     public boolean startAttack(MarketAPI source, StarSystemAPI system, Random random) {
